@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-12T16:21:29Z",
+  "timestamp" : "2022-07-13T16:23:46Z",
   "count_outdated" : 429,
   "uniques_outdated" : 152,
-  "count" : 655,
-  "uniques" : 230,
+  "count" : 656,
+  "uniques" : 231,
   "views" : [
     {
       "timestamp": "2022-07-01T00:00:00Z",
@@ -86,6 +86,13 @@
       "timestamp": "2022-07-12T00:00:00Z",
       "count": 4,
       "count_minmax": [ 4, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
