@@ -1,6 +1,6 @@
 {
-  "count": 226,
-  "uniques": 72,
+  "count": 227,
+  "uniques": 73,
   "views": [
     {
       "timestamp": "2022-07-01T00:00:00Z",
@@ -60,6 +60,11 @@
     {
       "timestamp": "2022-07-12T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-13T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
